--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=jpa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+jwtPrefix=jwt
