--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    "target": "ES5",
-    "module": "ES2015",
+    "target": "ES2015",
+    "module": "ESNext",
     "allowSyntheticDefaultImports": true,
-    "jsx": "react",
-    "moduleResolution": "nodenext"
+    "jsx": "react-jsx",
+    "moduleResolution": "Node"
   }
 }
