--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,11 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1"
   }
 }
