[backend] implement to move refreshtoken validity and accesstoken validity to application.properties file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 
 jwtPrefix=jwt
+
+accesstoken.validity=36000000
+refreshtoken.validity=604800000
